src/test/ui/error-codes/E0054.stderr
error[E0054]: cannot cast as `bool`
  --> $DIR/E0054.rs:13:24
   |
13 |     let x_is_nonzero = x as bool; //~ ERROR E0054
   |                        ^^^^^^^^^ unsupported cast
   |
   = help: compare with zero instead

error: aborting due to previous error

